--- a/src/components/FileDropzone/FileDropzone.scss
+++ b/src/components/FileDropzone/FileDropzone.scss
@@ -178,7 +178,9 @@
   padding: 4px 8px;
   background-color: var(--primary-icon-color);
 }
-
+.ff-no-apps-message {
+    margin: auto;
+  }
 
 .ff-upload-options-wrapper {
   display: flex;
