--- a/src/components/NLPInput/components/NlpDropDown/NlpDropdown.scss
+++ b/src/components/NLPInput/components/NlpDropDown/NlpDropdown.scss
@@ -126,6 +126,10 @@
   color: var(--nlp-step-group-color);
   background-color: var(--nlp-step-group-background);
 }
+.ff-ws {
+  color: var(--web-service-nlp-label);
+  background-color: var(--nlp-step-group-background);
+}
 
 .ff-pe {
   color: var(--nlp-pe-color);
