--- a/src/assets/Themes/DarkTheme.scss
+++ b/src/assets/Themes/DarkTheme.scss
@@ -37,8 +37,14 @@ $dark-theme: (
   available-memory-bg: #9f2ea1,
   assigned-memory-bg:
     linear-gradient(88.75deg, #bdb7ff 1.07%, #a8a1ff 40.23%, #7e72ff 79.4%),
+  assigned-memory-bg-1: #bdb7ff,
+  assigned-memory-bg-2: #a8a1ff,
+  assigned-memory-bg-3: #7e72ff,
   used-memory-bg:
     linear-gradient(90deg, #e0c6fd 0.13%, #c893fd 40.13%, #b264ff 80.13%),
+  used-memory-bg-1: #e0c6fd,
+  used-memory-bg-2: #c893fd,
+  used-memory-bg-3: #b264ff,
   primary-button-color:
     linear-gradient(188.79deg, #71347b 2.94%, #46164d 93.09%),
   primary-button-hover:
@@ -150,7 +156,7 @@ $dark-theme: (
   status-warning-hover-bg-color: #fcd8ac,
   status-percentage-growth-bg-color: #ecedf8,
   line-chart-data: #4c90ff,
-
+  web-service-nlp-label: #241ae4,
   status-button-bg-passed: #c6efcd,
   status-button-bg-failed: #f7d9d9,
   status-button-bg-running: #ecedf8,
@@ -406,6 +412,13 @@ $dark-theme: (
   ff-content-card-shadow-color: rgba(0, 0, 0, 0.1),
   editor-bg-color: #242425,
   editor-border-color: #0c0213,
+  ff-scrollbar-thumb-bg-color: #a3a3a3,
+  ff-delete-popup-border-color:
+    linear-gradient(
+      94.23deg,
+      rgba(228, 37, 37, 0.4) 16.33%,
+      rgba(201, 0, 0, 0.4) 80.07%
+    ),
 );
 
 :root {
