--- a/src/components/Charts/DashboardDonutChart/DashboardDonutChart.scss
+++ b/src/components/Charts/DashboardDonutChart/DashboardDonutChart.scss
@@ -65,6 +65,12 @@
       justify-content: center;
     }
   }
+  .ff-legend-item-version {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  }
 
   .ff-legend-container {
     display: flex;
