--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -61,6 +61,7 @@
     left: -14px;
     z-index: 1;
     @extend .fontSm;
+    overflow: hidden;
   }
 
   .comment-actions {
@@ -123,6 +124,8 @@
     resize: none;
     margin: 0 10px;
     outline: none;
+    font-family: 'poppins';
+    font-size: 12px;
     &:focus,
     &:focus-visible {
       outline: 1px solid var(--ff-comment-input-border-color);
