--- a/src/components/Drawer/Drawer.scss
+++ b/src/components/Drawer/Drawer.scss
@@ -93,6 +93,7 @@
           }
           .ff-custom-header {
             width: 100%;
+            border-radius: 4px;
           }
         }
       }
